<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_favs" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_clock"
            android:title="@string/menu_recents" />
        <item
            android:id="@+id/nav_heroes"
            android:icon="@drawable/ic_superhero"
            android:title="@string/menu_all" />
        <item
            android:id="@+id/nav_theme"
            android:icon="@drawable/ic_menu_theme"
            android:title="@string/menu_theme" />
    </group>
</menu>
