<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="?attr/backgroundColor"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/img_cap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cap" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/img_hulk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hulk" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/img_iron_man"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ch_cap"
            app:srcCompat="@drawable/iron_man" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/img_thanos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/ch_hulk"
            app:srcCompat="@drawable/thanos" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/ch_cap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch_cap"
            android:textColor="?attr/textColor"
            android:buttonTint="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/ch_iron_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/ch_iron_man"
            android:buttonTint="?attr/colorPrimary"
            android:textColor="?attr/textColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/ch_thanos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch_thanos"
            app:layout_constraintBottom_toBottomOf="parent"
            android:buttonTint="?attr/colorPrimary"
            android:textColor="?attr/textColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/ch_hulk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch_hulk"
            android:textColor="?attr/textColor"
            android:buttonTint="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>